--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="title_text_size">20sp</dimen>
+    <dimen name="login_title_margin">30dp</dimen>
+    <dimen name="drawable_padding">3dp</dimen>
+    <dimen name="label_text_size">16sp</dimen>
+    <dimen name="login_button_horizontal">30dp</dimen>
+    <dimen name="normal_margin">10dp</dimen>
 </resources>
