--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -66,11 +66,11 @@
                 android:src="@mipmap/ic_edit" />
         </LinearLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/home_activities_rv"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/home_activities_rv"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="1" />-->
     </LinearLayout>
 
 </LinearLayout>
